--- a/register.html
+++ b/register.html
@@ -22,8 +22,8 @@
   </div>
   
   <div class="input-container">
-    <i class="fa fa-key icon"></i>
-    <input class="input-field" type="password" placeholder="Password" name="psw">
+    <i class="fa fa-graduation-cap icon"></i>
+    <input class="input-field" type="text" placeholder="Qualification" name="qualification">
   </div>
 
   <button type="submit" class="btn">Register</button>
